# mergenetic

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  prepare_fasttext.py  pyproject.toml  requirements.txt  requirements_nb.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  python-package.yml
cli/: mergenetic.py  readme.md  requirements.txt
configs/: gsm8k-ro-test_config.yaml  multilang-arc2_config.yaml  multilang-arc_config.yaml
configs/gsm8k-ro-test/gsm8k-ro-test/: config.yaml
experiments/evolutionary-merging/: 1.0-singletask-predefined.ipynb  2.0-multitask-predefined.ipynb  end2end.py  end2end_multilingual.py
experiments/evolutionary-merging-lm-harness/: 1-multitask-evalharness.ipynb  1-singletask-evalharness.ipynb  end2end.py  end2end_multilingual.py  end2end_multiobjective.py
experiments/evolutionary-merging-lm-harness/demo_run/: demo_run.csv
experiments/evolutionary-merging-lm-harness/demo_run/demo_run/: config.yaml
experiments/evolutionary-merging-lm-harness/multilang_arc/: multilang_arc.sh  multilang_arc.yaml
experiments/evolutionary-merging-lm-harness/multiobjective/: multiobjective.sh  multiobjective.yaml
experiments/evolutionary-merging-lm-harness/romanian_math/: romanian_math_gmpirt.sh  romanian_math_gmpirt.yaml
experiments/evolutionary-merging/multilang_arc/: multilang_arc.sh  multilang_arc.yaml
experiments/evolutionary-merging/romanian_math/: romanian_math_gmpirt.sh  romanian_math_gmpirt.yaml
experiments/tests/: perf_estimation.py
gui/: README.md  gui.py  gui_utils.py  requirements.txt
lm_tasks/arc/: arc-de-sample.yaml  arc-de.yaml  arc-en-sample.yaml  arc-en.yaml  arc-it-sample.yaml  arc-it.yaml  arc-nl-sample.yaml  arc-nl.yaml  utils.py
lm_tasks/gsm8k/: gsm8k-en.yaml  gsm8k-it.yaml  gsm8k-nl.yaml  gsm8k-ro.yaml
notebooks/: Introduction_to_Mergenetic.ipynb
src/cli/: mergenetic.py
src/gui/: gui.py  gui_utils.py
src/mergenetic/: README.md  __init__.py  utils.py
src/mergenetic/estimator/: __init__.py  perf_estimation.py  utils.py
src/mergenetic/evaluation/: __init__.py  evaluator.py  lm_harness.py  math_language.py  multilingual_evaluator.py  perf_estimation.py  utils.py
src/mergenetic/merging/: __init__.py  dare_taskarithmetic_merger.py  linear_merger.py  merger.py  slerp_merger.py  taskarithmetic_merger.py  ties_dare_merger.py  ties_merger.py
src/mergenetic/optimization/: __init__.py  merging_problem.py  predefined_problems.py
src/mergenetic/searcher/: searcher.py
tests/: test_cli.py  test_estimator.py  test_eval.py  test_gui.py  test_mergers.py  test_problems.py  test_searcher.py
